adding send btn

--- a/index.html
+++ b/index.html
@@ -691,9 +691,9 @@
                 <label for="terms" class="label">Accept <a href="#" class="label-link">Terms of Services</a> and <a href="#" class="label-link">Privacy Policy</a>
                 </label>
               </div>
-
-              <button type="submit" class="btn btn-primar">Send Message</button>
             </div>
+            <button type="submit" class="btn btn-primary">Envoyer</button>
+
           </form>
 
           <ul class="contact-list">
