--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
             Nous vous invitons à discuter de la manière dont notre agence digitale peut vous aider à atteindre vos objectifs de marketing numérique.
           </p>
 
-          <form action="" class="contact-form">
+          <form action="https://formsubmit.co/contact@lidency.fr" method="POST" class="contact-form">
 
             <div class="input-wrapper">
               <input type="text" name="name" aria-label="name" placeholder="Nom*" required class="input-field">
