--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
             Nous vous invitons à discuter de la manière dont notre agence digitale peut vous aider à atteindre vos objectifs de marketing numérique.
           </p>
 
-          <form action="https://formsubmit.co/lidencygroup@gmail.com" method="POST" class="contact-form">
+          <form action="https://formsubmit.co/3cc4fbea5091beb8c9a86fa5044eac70" method="POST" class="contact-form">
 
             <div class="input-wrapper">
               <input type="text" name="name" aria-label="name" placeholder="Nom*" required class="input-field">
