--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </li>
 
             <li>
-              <a href="#" class="btn btn-primary">Commencer</a>
+              <a href="#contact" class="btn btn-primary">Commencer</a>
             </li>
           </ul>
         </nav>
@@ -90,7 +90,7 @@
               <h1 class="h1 hero-title">Nous sommes prêt pour le marketing</h1>
               <p class="hero-text">Faites croître votre entreprise, créez une marque forte et privilégiez la satisfaction client.</p>
 
-              <a href="#" class="btn btn-primary">Commencer</a>
+              <a href="#contact" class="btn btn-primary">Commencer</a>
             </div>
 
             <figure class="hero-banner">
@@ -673,9 +673,9 @@
           <form action="https://formsubmit.co/3cc4fbea5091beb8c9a86fa5044eac70" method="POST" class="contact-form">
 
             <div class="input-wrapper">
-              <input type="text" name="name" aria-label="name" placeholder="Nom*" required class="input-field">
-
-              <input type="email" name="email_address" aria-label="email" placeholder="Addresse email*" class="input-field">
+              <input type="text" name="name" aria-label="name" placeholder="Nom & Prénom*" required class="input-field">
+              
+              <input type="email" name="email_address" aria-label="email" placeholder="Addresse e-mail*" class="input-field">
 
             </div>
 
@@ -684,7 +684,7 @@
 
               <input type="number" name="phone" aria-label="phone" placeholder="Numéro de téléphone*" class="input-field">
 
-              <textarea name="message" aria-label="message" placeholder="Votre message ...*" required class="input-field"></textarea>
+              <textarea name="message" aria-label="message" placeholder="Votre message *" required class="input-field"></textarea>
 
               <div class="checkbox-wrapper">
                 <input type="checkbox" name="terms_and_policy" required class="checkbox">
