--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
               <li>
                 <div class="entity-card">
-                  <ion-icon name="analytics-outline"></ion-icon>
+                  <ion-icon name="school-outline"></ion-icon>
                 </div>
 
                 <h3 class="h3">
