update button start to contact lidency

--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
 
             <h2 class="h2 section-title">Êtes-vous prêts ? Au travail !</h2>
 
-            <a href="#" class="btn btn-secondary">Commencer</a>
+            <a href="#contact" class="btn btn-secondary">Commencer</a>
           </div>
         </section>
 
