adding scroll animations

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
-    <!-- 
+    <!--
     - favicon
   -->
     <link
@@ -16,11 +16,11 @@
       type="image/x-icon"
     />
 
-    <!-- 
+    <!--
     - cstom css link
   -->
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <!-- 
+    <!--
     - google fonts link
   -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -87,8 +87,8 @@
 
     <main>
       <article>
-        <!-- 
-          - Heros 
+        <!--
+          - Heros
         -->
         <section class="section hero" id="home" aria-label="hero">
           <div class="container">
@@ -115,17 +115,17 @@
           </div>
         </section>
 
-        <!-- 
+        <!--
           - Entités
         -->
-        <section class="section entities" id="entities" aria-label="entities">
+        <section class="section entities hidden" id="entities" aria-label="entities">
           <div class="container">
             <h2 class="h2 section-title">Nos entités</h2>
 
             <p class="section-text">Les différentes entités de l'entreprise</p>
 
-            <ul class="grid-list">
-              <li>
+            <ul class="grid-list lids">
+              <li class="lid hidden">
                 <div class="entity-card">
                   <ion-icon name="pricetags-outline"></ion-icon>
                 </div>
@@ -138,7 +138,7 @@
                 </p>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="entity-card">
                   <ion-icon name="people-outline"></ion-icon>
                 </div>
@@ -151,7 +151,7 @@
                 </p>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="entity-card">
                   <ion-icon name="balloon-outline"></ion-icon>
                 </div>
@@ -164,7 +164,7 @@
                 </p>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="entity-card">
                   <ion-icon name="videocam-outline"></ion-icon>
                 </div>
@@ -177,7 +177,7 @@
                 </p>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="entity-card">
                   <ion-icon name="analytics-outline"></ion-icon>
                 </div>
@@ -190,7 +190,7 @@
                 </p>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="entity-card">
                   <ion-icon name="school-outline"></ion-icon>
                 </div>
@@ -206,17 +206,17 @@
           </div>
         </section>
 
-        <!-- 
-          - Service 
+        <!--
+          - Service
         -->
-        <section class="section service" id="service" aria-label="service">
+        <section class="section service hidden" id="service" aria-label="service">
           <div class="container">
             <h2 class="h2 section-title">Nos services</h2>
 
             <p class="section-text">Nous sommes les meilleurs en :</p>
 
-            <ul class="grid-list">
-              <li>
+            <ul class="grid-list lids">
+              <li class="lid hidden">
                 <div class="service-card">
                   <div class="card-icon" style="background-color: #13c4a1">
                     <ion-icon name="chatbox"></ion-icon>
@@ -234,7 +234,7 @@
                 </div>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="service-card">
                   <div class="card-icon" style="background-color: #6610f2">
                     <ion-icon name="desktop"></ion-icon>
@@ -252,7 +252,7 @@
                 </div>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="service-card">
                   <div class="card-icon" style="background-color: #ffb700">
                     <ion-icon name="bulb"></ion-icon>
@@ -270,7 +270,7 @@
                 </div>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="service-card">
                   <div class="card-icon" style="background-color: #fc3549">
                     <ion-icon name="phone-portrait"></ion-icon>
@@ -289,7 +289,7 @@
                 </div>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="service-card">
                   <div class="card-icon" style="background-color: #00d288">
                     <ion-icon name="archive"></ion-icon>
@@ -308,7 +308,7 @@
                 </div>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="service-card">
                   <div class="card-icon" style="background-color: #ff612f">
                     <ion-icon name="build"></ion-icon>
@@ -328,17 +328,17 @@
           </div>
         </section>
 
-        <!-- 
+        <!--
           - Project
         -->
-        <section class="section project" id="project" aria-label="project">
+        <section class="section project hidden" id="project" aria-label="project">
           <div class="container">
             <h2 class="h2 section-title">Nos Projets Récents</h2>
 
             <p class="section-text">Voici nos récents projets :</p>
 
-            <ul class="grid-list">
-              <li>
+            <ul class="grid-list lids">
+              <li class="lid hidden">
                 <div class="project-card">
                   <figure
                     class="card-banner img-holder"
@@ -368,7 +368,7 @@
                 </div>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="project-card">
                   <figure
                     class="card-banner img-holder"
@@ -399,7 +399,7 @@
                 </div>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="project-card">
                   <figure
                     class="card-banner img-holder"
@@ -430,7 +430,7 @@
                 </div>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="project-card">
                   <figure
                     class="card-banner img-holder"
@@ -461,7 +461,7 @@
                 </div>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="project-card">
                   <figure
                     class="card-banner img-holder"
@@ -491,7 +491,7 @@
                 </div>
               </li>
 
-              <li>
+              <li class="lid hidden">
                 <div class="project-card">
                   <figure
                     class="card-banner img-holder"
@@ -524,11 +524,11 @@
           </div>
         </section>
 
-        <!-- 
+        <!--
         - #ABOUT
       -->
 
-        <section class="section about" id="about" aria-label="about">
+        <section class="section about hidden" id="about" aria-label="about">
           <div class="container">
             <div
               class="about-banner img-holder"
@@ -618,11 +618,11 @@
           </div>
         </section>
 
-        <!-- 
+        <!--
         - #CTA
       -->
         <section
-          class="section cta"
+          class="section cta hidden"
           aria-label="cta"
           style="background-image: url('assets/images/cta-bg.jpg')"
         >
@@ -635,10 +635,10 @@
           </div>
         </section>
 
-        <!-- 
+        <!--
         - #BLOG
       -->
-        <section class="section blog" id="blog" aria-label="blob">
+        <section class="section blog hidden" id="blog" aria-label="blob">
           <div class="container">
             <h2 class="h2 section-title">
               Derniers articles mis à jour chaque semaine
@@ -786,10 +786,10 @@
           </div>
         </section>
 
-        <!-- 
+        <!--
         - #CONTACT
       -->
-        <section class="section contact" id="contact" aria-label="contact">
+        <section class="section contact hidden" id="contact" aria-label="contact">
           <div class="container">
             <h2 class="h2 section-title">Nous contacter</h2>
 
@@ -929,7 +929,7 @@
           </div>
         </section>
 
-        <!-- 
+        <!--
     - #FOOTER
   -->
 
@@ -942,7 +942,7 @@
           </div>
         </footer>
 
-        <!-- 
+        <!--
     - #BACK TO TOP
   -->
 
@@ -957,8 +957,8 @@
       </article>
     </main>
 
-    <!-- 
-      -custom js links 
+    <!--
+      -custom js links
     -->
     <script src="./assets/js/script.js" async defer></script>
     <!--
