animate few sections

--- a/index.html
+++ b/index.html
@@ -63,13 +63,7 @@
             </li>
 
             <li>
-              <a href="#contact" class="navbar-link" data-nav-link
-                >Contactez-nous</a
-              >
-            </li>
-
-            <li>
-              <a href="#contact" class="btn btn-primary">Commencer</a>
+              <a href="#contact" class="btn btn-primary">Contactez-nous</a>
             </li>
           </ul>
         </nav>
@@ -209,14 +203,14 @@
         <!--
           - Service
         -->
-        <section class="section service hidden" id="service" aria-label="service">
+        <section class="section service" id="service" aria-label="service">
           <div class="container">
             <h2 class="h2 section-title">Nos services</h2>
 
             <p class="section-text">Nous sommes les meilleurs en :</p>
 
             <ul class="grid-list lids">
-              <li class="lid hidden">
+              <li>
                 <div class="service-card">
                   <div class="card-icon" style="background-color: #13c4a1">
                     <ion-icon name="chatbox"></ion-icon>
@@ -234,7 +228,7 @@
                 </div>
               </li>
 
-              <li class="lid hidden">
+              <li>
                 <div class="service-card">
                   <div class="card-icon" style="background-color: #6610f2">
                     <ion-icon name="desktop"></ion-icon>
@@ -252,7 +246,7 @@
                 </div>
               </li>
 
-              <li class="lid hidden">
+              <li>
                 <div class="service-card">
                   <div class="card-icon" style="background-color: #ffb700">
                     <ion-icon name="bulb"></ion-icon>
@@ -270,7 +264,7 @@
                 </div>
               </li>
 
-              <li class="lid hidden">
+              <li>
                 <div class="service-card">
                   <div class="card-icon" style="background-color: #fc3549">
                     <ion-icon name="phone-portrait"></ion-icon>
@@ -289,7 +283,7 @@
                 </div>
               </li>
 
-              <li class="lid hidden">
+              <li>
                 <div class="service-card">
                   <div class="card-icon" style="background-color: #00d288">
                     <ion-icon name="archive"></ion-icon>
@@ -308,7 +302,7 @@
                 </div>
               </li>
 
-              <li class="lid hidden">
+              <li>
                 <div class="service-card">
                   <div class="card-icon" style="background-color: #ff612f">
                     <ion-icon name="build"></ion-icon>
@@ -528,7 +522,7 @@
         - #ABOUT
       -->
 
-        <section class="section about hidden" id="about" aria-label="about">
+        <section class="section about" id="about" aria-label="about">
           <div class="container">
             <div
               class="about-banner img-holder"
@@ -622,7 +616,7 @@
         - #CTA
       -->
         <section
-          class="section cta hidden"
+          class="section cta"
           aria-label="cta"
           style="background-image: url('assets/images/cta-bg.jpg')"
         >
@@ -789,7 +783,7 @@
         <!--
         - #CONTACT
       -->
-        <section class="section contact hidden" id="contact" aria-label="contact">
+        <section class="section contact" id="contact" aria-label="contact">
           <div class="container">
             <h2 class="h2 section-title">Nous contacter</h2>
 
