--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
                   <p class="card-text">
                     Le marketing et le reporting sont des éléments clés pour
                     mesurer le succès de vos efforts de marketing en ligne.
+                    Très efficace pour vous permettre de comprendre comment votre public réagit à votre contenu
                   </p>
                 </div>
               </li>
