--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
           <div class="container">
             <p class="copyright">
               &copy; 2023 All Rights Reserved by
-              <a href="cindanojonathan.fr" class="copyright-link">snooker4real</a>
+              <a href="www.cindanojonathan.fr" class="copyright-link">snooker4real</a>
             </p>
           </div>
         </footer>
