--- a/index.html
+++ b/index.html
@@ -852,9 +852,9 @@
                     class="checkbox"
                   />
                   <label for="terms" class="label"
-                    >Accept
-                    <a href="#" class="label-link">Terms of Services</a> and
-                    <a href="#" class="label-link">Privacy Policy</a>
+                    >Accepter les
+                    <a href="#" class="label-link">Conditions d'Utilisation</a> et
+                    <a href="#" class="label-link">Politique de Confidentialité</a>
                   </label>
                 </div>
               </div>
@@ -869,7 +869,7 @@
                   </div>
 
                   <div class="card-content">
-                    <h3 class="h3 card-title">Mail here</h3>
+                    <h3 class="h3 card-title">Email</h3>
 
                     <a href="#mailto:contact@lidency.com" class="card-link"
                       >contact@lidency.com</a
@@ -877,7 +877,7 @@
                     <a
                       href="#mailto:davidmwamba.pro@gmail.com"
                       class="card-link"
-                      >davidmwamba.pro@gmail.com</a
+                      >lidencygroup@gmail.com</a
                     >
                   </div>
                 </div>
@@ -890,7 +890,7 @@
                   </div>
 
                   <div class="card-content">
-                    <h3 class="h3 card-title">Visit Here</h3>
+                    <h3 class="h3 card-title">Visiter</h3>
 
                     <address class="card-address">
                       12 rue de la Part-Dieu, Lyon, 69003, France
@@ -909,7 +909,7 @@
                   </div>
 
                   <div class="card-content">
-                    <h3 class="h3 card-title">Call here</h3>
+                    <h3 class="h3 card-title">Appeler here</h3>
 
                     <a href="#tel:+33758916877" class="card-link"
                       >+33 4 27 50 19 19</a
