--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" type="text/css" />
     <!--
     - favicon
   -->
@@ -928,12 +929,59 @@
     - #FOOTER
   -->
 
+<!--        <footer class="footer">-->
+<!--          <div class="container">-->
+<!--            <p class="copyright">-->
+<!--              &copy; 2023 All Rights Reserved by-->
+<!--              <a href="https://www.cindanojonathan.fr" class="copyright-link">snooker4real</a>-->
+<!--            </p>-->
+<!--          </div>-->
+<!--        </footer>-->
+
         <footer class="footer">
-          <div class="container">
-            <p class="copyright">
-              &copy; 2023 All Rights Reserved by
-              <a href="https://www.cindanojonathan.fr" class="copyright-link">snooker4real</a>
-            </p>
+          <div class="footer_container">
+            <div class="row">
+              <div class="footer-col">
+                <h4>Company</h4>
+                <ul>
+                  <li><a href="#">About us</a></li>
+                  <li><a href="#">Our services</a></li>
+                  <li><a href="#">Privacy policy</a></li>
+                  <li><a href="#">Affiliate program</a></li>
+                </ul>
+              </div>
+
+              <div class="footer-col">
+                <h4>Get Help</h4>
+                <ul>
+                  <li><a href="#">FAQ</a></li>
+                  <li><a href="#">Shipping</a></li>
+                  <li><a href="#">Returns</a></li>
+                  <li><a href="#">Order status</a></li>
+                  <li><a href="#">Payment options</a></li>
+                </ul>
+              </div>
+
+              <div class="footer-col">
+                <h4>Online Shop</h4>
+                <ul>
+                  <li><a href="#">Watch</a></li>
+                  <li><a href="#">Bag</a></li>
+                  <li><a href="#">Shoes</a></li>
+                  <li><a href="#">Dress</a></li>
+                </ul>
+              </div>
+
+              <div class="footer-col">
+                <h4>Follow us</h4>
+                <div class="social-links">
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+              </div>
+            </div>
           </div>
         </footer>
 
